
    HDFS-445. pread should refetch block locations when necessary.
    (Todd Lipcon via dhruba)

  IMPROVEMENTS

  BUG FIXES

    HDFS-561. Fix write pipeline READ_TIMEOUT.
    (Todd Lipcon via dhruba)

    HDFS-927. DFSInputStream retries too many times for new block locations.
    (Todd Lipcon via dhruba)

    HDFS-1215. Fix unit test TestNodeCount.
    (Todd Lipcon via dhruba)

Release 0.20.3 - Unreleased

  NEW FEATURES

    HADOOP-6637. Benchmark for establishing RPC session. (shv)

    HADOOP-6382. Add support for publishing Hadoop jars to Apache Maven
    repository. (Giridharan Kesavan via cdouglas)

  BUG FIXES

    HADOOP-6760. WebServer shouldn't increase port number in case of negative
    port setting caused by Jetty's race (cos)

    MAPREDUCE-1522. FileInputFormat may use the default FileSystem for the
    input path. (Tsz Wo (Nicholas), SZE via cdouglas)

    HDFS-1024 SecondaryNamenode fails to checkpoint because namenode fails
    with CancelledKeyException (Dmytro Molkov via Stack)

    HDFS-955. New implementation of saveNamespace() to avoid loss of edits 
    when name-node fails during saving. (shv)

    HDFS-1041. DFSClient.getFileChecksum(..) should retry if connection to
    the first datanode fails.  (szetszwo)

    HDFS-909. Wait until edits syncing is finishes before purging edits.
    (Todd Lipcon via shv)

    MAPREDUCE-1372. ConcurrentModificationException in JobInProgress.
    (Dick King and Amareshwari Sriramadasu via tomwhite)

    MAPREDUCE-118. Fix Job.getJobID(). (Amareshwari Sriramadasu via sharad)

  IMPROVEMENTS

    MAPREDUCE-1407. Update javadoc in mapreduce.{Mapper,Reducer} to match
    actual usage. (Benoit Sigoure via cdouglas)

Release 0.20.2 - 2010-2-19

  NEW FEATURES

    HADOOP-6218. Adds a feature where TFile can be split by Record
    Sequence number. (Hong Tang and Raghu Angadi via ddas)

  BUG FIXES

    MAPREDUCE-112. Add counters for reduce input, output records to the new API.