@@ -44,6 +44,9 @@ Release 0.20-append - Unreleased
     HDFS-1215. Fix unit test TestNodeCount.
     (Todd Lipcon via dhruba)
 
+    HDFS-606. Fix ConcurrentModificationException in invalidateCorruptReplicas.
+    (Todd Lipcon via dhruba)
+
 Release 0.20.3 - Unreleased
 
   NEW FEATURES
